--- a/frontend/src/routes/Content.css
+++ b/frontend/src/routes/Content.css
@@ -1,10 +1,62 @@
 html, body, #root, .container {height:100%;}
+a {text-decoration:none;}
+li {list-style:none;}
 body {overflow-x:hidden;}
 
-.content {
+body {
     background-color:#fac;
     height:100%;
+    
+}
+
+.list {
     padding:10px;
-    text-align:center;
+    max-width:1000px;
+    background-color:#fff;
+    margin:20px auto;
+    height:80%;
+    
+}
+
+.list li {
+    width:calc(25% - 20px);
+    height:calc(50% - 20px);
+    background-color:#fff;
+    border:1px solid #ddd;
+    margin:10px;
+    float:left;
+    position:relative;
+    
+}
+
+.list li img {
+    background-color:#ddd;
+    width:100%;
+    height:58%;
+    
+}
+
+.list li .info {
+    padding:0 10px;
+    
+}
+
+.list li .info .job {
+    font-size:15px;
+    
+}
+
+.list li p {margin:0;}
+
+
+
+
+.list li .bottom {
+    position:absolute;
+    padding:10px;
+    bottom:0;
+    left:0;
+    width:100%;
+    border-top:1px solid #ddd;
     
 }
