--- a/frontend/src/routes/Content.css
+++ b/frontend/src/routes/Content.css
@@ -12,9 +12,10 @@ body {
 .list {
     padding:10px;
     max-width:1000px;
-    background-color:#fff;
+    background-color:rgba(255,255,255,0.5);
     margin:20px auto;
     height:80%;
+    box-shadow:1px 1px 15px #aaa;
     
 }
 
@@ -53,6 +54,7 @@ body {
 
 .list li .bottom {
     position:absolute;
+    height:15%;
     padding:10px;
     bottom:0;
     left:0;
