--- a/frontend/src/routes/Header.css
+++ b/frontend/src/routes/Header.css
@@ -1,12 +1,18 @@
+a {color:#fff;}
+
 .menu {
-    background-color:#bbb;
-    padding:5px;
+    background-color:#000;
+    padding:0 20px;
     box-sizing:border-box;
     overflow:hidden;
+    height:70px;
+    line-height:70px;
+    color:#fff;
     
 }
 
-.menu h2 {
+.menu h2 {    
+    line-height:70px;
     float:left;
     
 }
