--- a/frontend/src/routes/Details.css
+++ b/frontend/src/routes/Details.css
@@ -1,6 +1,6 @@
 .Details {
     background-color:rgba(255,255,255,0.3);
-    height:100%;
+    height:cover;
     padding:0 40px;
     
 }
@@ -10,5 +10,43 @@
     margin:0 auto;
     background-color:rgba(200,240,255,0.5);
     box-shadow:0px 0px 15px #cdf;
+    padding:20px;
+    
+}
+
+.photo {
+    border:1px solid #ccc;
+    height:400px;
+    background-color:#eee;
+    box-sizing:border-box;
+    
+}
+
+.desc {
+    margin:30px 0;
+    background-color:#fff;
+    border:1px solid #ccc;
+    
+}
+
+.desc_info {
+    padding:20px;
+    box-sizing:border-box;
+    border-bottom:1px solid #ccc;
+    
+}
+
+.desc_info h2 {
+    font-size:18px;
+    margin-bottom:5px;
+    
+}
+
+.desc_body {
+    height:500px;
+    padding:20px;
+    box-sizing:border-box;
+    color:#999;
+    font-size:20px;
     
 }
